// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView should render 1`] = `
<div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-112 makeStyles-pointer-16"
        data-testid="client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          data-testid="project-client-row"
        >
          Robert C. Martin
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Developer
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          New York
          , 
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          trade 1, trade 2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-75 makeStyles-pending-82  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Pending
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-112 makeStyles-pointer-16"
        data-testid="client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          data-testid="project-client-row"
        >
          Martin Fowler
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          General Contractor
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          trade 1, trade 2, trade 3, some trade
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-75 makeStyles-active-81  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Accepted
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-113"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 2"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          2
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-114 makeStyles-close-125 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-115 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-117"
      >
        <div
          class="makeStyles-drawerButton-118"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-116"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-119 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-144"
      >
        <div
          class="makeStyles-company-145"
        >
          <div
            class="makeStyles-drawerText-121"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-146 makeStyles-entityTitle-143 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-122"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-120"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-121 makeStyles-drawerTextSeparation-123"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-183  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-183  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-120"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-121 makeStyles-drawerTextSeparation-123"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-183  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-183  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-120"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-121 makeStyles-drawerTextSeparation-123"
            >
              <span
                class="makeStyles-listAccent-146"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-124"
        />
        <div
          class="makeStyles-ctaWrapper-147"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-163 makeStyles-borderPrimaryButton-155"
              data-testid="drawerEditTaxButton"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Taxes
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListView should render client info 1`] = `
<div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-824 makeStyles-pointer-728"
        data-testid="client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          data-testid="project-client-row"
        >
          Robert C. Martin
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Developer
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          New York
          , 
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          trade 1, trade 2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-787 makeStyles-pending-794  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Pending
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-824 makeStyles-pointer-728"
        data-testid="client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          data-testid="project-client-row"
        >
          Martin Fowler
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          General Contractor
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          trade 1, trade 2, trade 3, some trade
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-787 makeStyles-active-793  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Accepted
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-825"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 2"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          2
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-826 makeStyles-close-837 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-827 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-829"
      >
        <div
          class="makeStyles-drawerButton-830"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-828"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-831 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-856"
      >
        <div
          class="makeStyles-company-857"
        >
          <div
            class="makeStyles-drawerText-833"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-858 makeStyles-entityTitle-855 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-834"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-832"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-833 makeStyles-drawerTextSeparation-835"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-895  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-895  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-832"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-833 makeStyles-drawerTextSeparation-835"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-895  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-895  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-832"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-833 makeStyles-drawerTextSeparation-835"
            >
              <span
                class="makeStyles-listAccent-858"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-836"
        />
        <div
          class="makeStyles-ctaWrapper-859"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-875 makeStyles-borderPrimaryButton-867"
              data-testid="drawerEditTaxButton"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Taxes
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListView should render loading 1`] = `
<div>
  Loading...
</div>
`;
